# claude-burnrate

./: .gitignore  CLAUDE.md  Cli.py  Pyproject.toml  README.md  Readme.md  SPEC.md  cli.py  pyproject.toml  seed_demo_data.py  test_cli.py
.claude/: settings.local.json
.github/workflows/: publish.yml  test.yml
examples/: heavy_coder_assumptions.json  pro_user_assumptions.json  weekend_builder_assumptions.json
shell/: burnrate_hook.ps1
