[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-burnrate"
version = "0.2.0"
description = "Track your Claude session + weekly usage. Never waste limits again."
readme = "Readme.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Aravind Kurapati"},
]
keywords = ["claude", "anthropic", "usage", "cli", "limits", "budget"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
]

[project.scripts]
claude-burnrate = "cli:app"

[project.urls]
Homepage = "https://github.com/AravindKurapati/claude-burnrate"
Issues   = "https://github.com/AravindKurapati/claude-burnrate/issues"

[tool.setuptools]
py-modules = ["cli"]
